--- a/demos/connect1.html
+++ b/demos/connect1.html
@@ -52,7 +52,7 @@
                                     </div>
                                     <div class="row">
                                        <div class="spinner">
-										<label class="text-white" style="font-size:4vh" id="label">Connecting to HR agent</label>
+										<label class="text-white" style="font-size:4vh" id="label">Coonecting to Client</label>
 										<div class="bounce1"></div>
 										<div class="bounce2"></div>
 										<div class="bounce3"></div>
@@ -129,7 +129,7 @@
 <link rel="stylesheet" href="/dev/getHTMLMediaElement.css">
 <script src="/dev/getHTMLMediaElement.js"></script>
  <script src="js/base.min.js" type="text/javascript"></script>
-  <script src="js/webrtc.js" type="text/javascript"></script>
+  <script src="js/hr-webrtc.js" type="text/javascript"></script>
 <script>
 
 </script>
